<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView6"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_margin_leftright"
                android:layout_marginRight="@dimen/card_margin_leftright"
                android:id="@+id/card1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/maxminutes"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/maxminutes"
                            android:id="@+id/maxminutestitle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/maxminutessum"
                            android:id="@+id/language_summary"
                            android:layout_below="@+id/maxminutestitle" />
                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:id="@+id/extensiontime"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/extensiontime"
                            android:id="@+id/extensiontimetitle" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/csafsaf"
                            android:layout_below="@+id/extensiontimetitle"
                            android:text="@string/extensiontimesum" />

                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shaketoextend"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true"
                        android:padding="15dp" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/shake_to_extend"
                            android:id="@+id/textVisew4"
                            android:layout_toLeftOf="@+id/switchshaketoextend" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/shake_device_to_extend_time_until_shutdown"
                            android:id="@+id/textVisew5"
                            android:layout_below="@+id/textVisew4"
                            android:layout_toLeftOf="@+id/switchshaketoextend" />

                        <android.support.v7.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:id="@+id/switchshaketoextend"
                            android:layout_marginLeft="10dp" />
                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"
                        android:id="@+id/framseLayoust" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shutdowncountdown"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true"
                        android:padding="15dp" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/shutdown_countdown"
                            android:id="@+id/textView4"
                            android:layout_toLeftOf="@+id/switchshutdowncountdown" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/show_countdown_dialog_10_seconds_before_shutdown"
                            android:id="@+id/textView5"
                            android:layout_below="@+id/textView4"
                            android:layout_toLeftOf="@+id/switchshutdowncountdown" />

                        <android.support.v7.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:id="@+id/switchshutdowncountdown"
                            android:layout_marginLeft="10dp" />
                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"
                        android:id="@+id/frameLayoust" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/hapticHeadsUp"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true"
                        android:padding="15dp" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/haptic_heads_up"
                            android:id="@+id/textVisesw4"
                            android:layout_toLeftOf="@+id/switchHapticHeadsUp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/short_vibration_in_set_time_before_the_device_shuts_down"
                            android:id="@+id/textVisesw5"
                            android:layout_below="@+id/textVisesw4"
                            android:layout_toLeftOf="@+id/switchHapticHeadsUp" />

                        <android.support.v7.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:id="@+id/switchHapticHeadsUp"
                            android:layout_marginLeft="10dp" />
                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"
                        android:id="@+id/frameLsayousst" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/acousticalHeadsUp"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true"
                        android:padding="15dp" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/acoustical_heads_up"
                            android:id="@+id/textViesw4"
                            android:layout_toLeftOf="@+id/switchAcousticalHeadsUp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/play_short_sound_in_set_time_before_the_device_shuts_down"
                            android:id="@+id/textViesw5"
                            android:layout_below="@+id/textViesw4"
                            android:layout_toLeftOf="@+id/switchAcousticalHeadsUp" />

                        <android.support.v7.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:id="@+id/switchAcousticalHeadsUp"
                            android:layout_marginLeft="10dp" />
                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"
                        android:id="@+id/frameLayousst" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:id="@+id/headsUpSound"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/heads_up_sound"
                            android:id="@+id/fadgdfsaagra"
                            android:layout_marginLeft="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/cssafdsasaf"
                            android:layout_below="@+id/fadgdfsaagra"
                            android:text="@string/choose_sound_for_acoustical_heads_up"
                            android:layout_marginLeft="20dp" />

                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"
                        android:id="@+id/headsUpSoundDivider" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:id="@+id/headsUpTime"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/heads_up_time"
                            android:id="@+id/fadgdagra"
                            android:layout_marginLeft="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/cssafsaf"
                            android:layout_below="@+id/fadgdagra"
                            android:text="@string/set_time_before_shutdown_to_vibrate_play_sound_default_1"
                            android:layout_marginLeft="20dp" />

                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"
                        android:id="@+id/headsUpTimeDivider" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pinprotection"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true"
                        android:padding="15dp" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/pin_protection"
                            android:id="@+id/textView4s"
                            android:layout_toLeftOf="@+id/switchpinprotection" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/opening_the_app_extending_or_canceling_the_shutdown_timer_requires_a_pin"
                            android:id="@+id/textViedw5"
                            android:layout_below="@+id/textView4s"
                            android:layout_toLeftOf="@+id/switchpinprotection" />

                        <android.support.v7.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:id="@+id/switchpinprotection"
                            android:layout_marginLeft="10dp" />
                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"
                        android:id="@+id/frameLayout" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/changepin"
                        android:background="@drawable/settingstap_dark"
                        android:clickable="true"
                        android:padding="15dp" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/change_pin"
                            android:id="@+id/textView9"
                            android:layout_marginLeft="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textView10"
                            android:layout_below="@+id/textView9"
                            android:layout_marginLeft="20dp" />
                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_dark"
                        android:id="@+id/changepindivider" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>