<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/relativeLayout"
        android:background="@drawable/rounded_bg_dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/willshutdownin"
            android:id="@+id/message"
            android:layout_below="@+id/textView"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="10"
            android:id="@+id/seconds"
            android:layout_below="@+id/message"
            android:textSize="60sp"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/seconds2"
            android:id="@+id/textView13"
            android:layout_below="@+id/seconds"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dp" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/extend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="false"
            android:src="@drawable/extend"
            fab:fab_size="normal"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="#496356"
            fab:fab_colorRipple="#99FFFFFF"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView13" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="false"
            android:src="@drawable/stop"
            fab:fab_size="normal"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="#496356"
            fab:fab_colorRipple="#99FFFFFF"
            android:layout_below="@+id/textView13" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:id="@+id/cancel"
            android:layout_below="@+id/message"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/settingstap_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/extend"
            android:textAllCaps="true"
            android:id="@+id/extend"
            android:layout_below="@+id/message"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/settingstap_dark"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />-->

    </RelativeLayout>

</RelativeLayout>